# ChangeLog for dev-ruby/sass
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sass/ChangeLog,v 1.54 2014/05/31 06:16:20 graaff Exp $

*sass-3.3.8 (31 May 2014)

  31 May 2014; Hans de Graaff <graaff@gentoo.org> +sass-3.3.8.ebuild:
  Version bump.

  31 May 2014; Hans de Graaff <graaff@gentoo.org> -sass-3.2.13.ebuild,
  -sass-3.2.14.ebuild:
  Cleanup.

*sass-3.2.19-r1 (13 May 2014)

  13 May 2014; Hans de Graaff <graaff@gentoo.org> +sass-3.2.19-r1.ebuild,
  sass-3.3.7.ebuild:
  Don't install binaries in the 3.2 slot to avoid file collisions between
  slots.

*sass-3.2.19 (13 May 2014)

  13 May 2014; Hans de Graaff <graaff@gentoo.org> +sass-3.2.19.ebuild:
  Version bump.

*sass-3.3.7 (12 May 2014)

  12 May 2014; Hans de Graaff <graaff@gentoo.org> +sass-3.3.7.ebuild:
  Version bump.

  20 Apr 2014; Hans de Graaff <graaff@gentoo.org> sass-3.2.18.ebuild:
  Add ruby21.

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> sass-3.1.21.ebuild,
  sass-3.2.13.ebuild, sass-3.2.14.ebuild, sass-3.2.18.ebuild, sass-3.2.9.ebuild:
  Remove ree18 and ruby18 target.

*sass-3.2.18 (25 Mar 2014)

  25 Mar 2014; Hans de Graaff <graaff@gentoo.org> +sass-3.2.18.ebuild:
  Version bump.

*sass-3.2.14 (25 Jan 2014)

  25 Jan 2014; Hans de Graaff <graaff@gentoo.org> +sass-3.2.14.ebuild:
  Version bump.

  22 Dec 2013; Manuel Rüger <mrueg@gentoo.org> -sass-3.2.12-r1.ebuild,
  -sass-3.2.12.ebuild:
  Cleanup old.

  22 Dec 2013; Anthony G. Basile <blueness@gentoo.org> sass-3.2.13.ebuild:
  Keyword ~ppc64, bug #465948

*sass-3.2.13 (21 Dec 2013)

  21 Dec 2013; Hans de Graaff <graaff@gentoo.org> +sass-3.2.13.ebuild:
  Version bump.

*sass-3.2.12-r1 (27 Nov 2013)

  27 Nov 2013; Hans de Graaff <graaff@gentoo.org> +sass-3.2.12-r1.ebuild:
  Add ruby20. Drop ppc64 for bug 465948.

  22 Nov 2013; Hans de Graaff <graaff@gentoo.org> -sass-3.2.10.ebuild,
  -sass-3.2.11.ebuild:
  Cleanup.

*sass-3.2.12 (11 Oct 2013)
