@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=ruby_targets_ruby19? ( doc? ( >=dev-ruby/yard-0.5.3[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( >=dev-ruby/yard-0.5.3[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( doc? ( >=dev-ruby/yard-0.5.3[ruby_targets_ruby21] ) ) ruby_targets_jruby? ( doc? ( >=dev-ruby/yard-0.5.3[ruby_targets_jruby] ) ) test? ( ruby_targets_ruby19? ( >=dev-ruby/listen-1.3.1:1[ruby_targets_ruby19] !!<dev-ruby/haml-3.1[ruby_targets_ruby19] !!<dev-ruby/sass-3.2.19-r1[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/listen-1.3.1:1[ruby_targets_ruby20] !!<dev-ruby/haml-3.1[ruby_targets_ruby20] !!<dev-ruby/sass-3.2.19-r1[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/listen-1.3.1:1[ruby_targets_ruby21] !!<dev-ruby/haml-3.1[ruby_targets_ruby21] !!<dev-ruby/sass-3.2.19-r1[ruby_targets_ruby21] ) ruby_targets_jruby? ( >=dev-ruby/listen-1.3.1:1[ruby_targets_jruby] !!<dev-ruby/haml-3.1[ruby_targets_jruby] !!<dev-ruby/sass-3.2.19-r1[ruby_targets_jruby] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_jruby? ( dev-java/jruby ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_jruby? ( test? ( dev-ruby/rake[ruby_targets_jruby] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) )
+DESCRIPTION=An extension of CSS3, adding nested rules, variables, mixins, selector inheritance, and more.
+EAPI=5
+HOMEPAGE=http://sass-lang.com/
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_jruby doc test test
+KEYWORDS=~amd64 ~arm ~ppc ~ppc64 ~x86
+LICENSE=MIT
+RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/listen-1.3.1:1[ruby_targets_ruby19] !!<dev-ruby/haml-3.1[ruby_targets_ruby19] !!<dev-ruby/sass-3.2.19-r1[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/listen-1.3.1:1[ruby_targets_ruby20] !!<dev-ruby/haml-3.1[ruby_targets_ruby20] !!<dev-ruby/sass-3.2.19-r1[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/listen-1.3.1:1[ruby_targets_ruby21] !!<dev-ruby/haml-3.1[ruby_targets_ruby21] !!<dev-ruby/sass-3.2.19-r1[ruby_targets_ruby21] ) ruby_targets_jruby? ( >=dev-ruby/listen-1.3.1:1[ruby_targets_jruby] !!<dev-ruby/haml-3.1[ruby_targets_jruby] !!<dev-ruby/sass-3.2.19-r1[ruby_targets_jruby] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_jruby? ( dev-java/jruby ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_jruby )
+SLOT=3.3
+SRC_URI=mirror://rubygems/sass-3.3.9.gem
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	fac675dcccf94392371a6abee62d909f	ruby-fakegem	738ee4b7f8b16d4a734b4d37717db89b	ruby-ng	14f0490e24cbad7c17cece628b3d111e	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=aff16800b40564d4130047cfefd02897
