@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/sass
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sass/ChangeLog,v 1.54 2014/05/31 06:16:20 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sass/ChangeLog,v 1.55 2014/06/28 05:39:01 graaff Exp $
+
+*sass-3.3.9 (28 Jun 2014)
+
+  28 Jun 2014; Hans de Graaff <graaff@gentoo.org> +sass-3.3.9.ebuild:
+  Version bump.
 
 *sass-3.3.8 (31 May 2014)
 
